# Panda3DNetworkBasics

./: README.md  pyproject.toml
chat-cli/: README.md  client.py  server.py
client/: client_base.py
server/: server_base.py
ursina-minimal/: README.md  local_game.py
ursina-minimal/client/: client_object.py  game.py
ursina-minimal/server/: server_object.py
